# Celabric

./: add_celabric_script_to_ipa.py  find_words_outside_dictionary.py  generate_dictionary_section.py  generate_ipa_section.py  index.html  main.css  main.html  modified_index.html  pyproject.toml  romanize.py  style.css
