[tool.poetry]
name = "celabric"
version = "0.1.0"
description = ""
authors = ["Babdus <babdusi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.2"
bs4 = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
